# ocr-parallelism

./: .gitignore  Cargo.toml  driver.py  readme.md  worker_module.py
src/: main.rs
