[package]
name = "ocr-parallelism"
version = "0.1.0"
edition = "2024"

[dependencies]
pyo3 = { version = "0.24.2", features = ["auto-initialize"] }
rayon = "1.8"  # For easy parallelism
tempfile = "3"

[profile.release]
opt-level = 3      # 3 for max speed (z = small + fast)
lto = true           # enables Link Time Optimization
codegen-units = 1    # compile fewer units in parallel = better optimization
panic = "abort"      # smaller binary, faster (if you don't need unwinding)
strip = true         # remove debug symbols